Airflow-docker/logs/dag_id=csvData_insert_postgresql/run_id=manual__2023-12-17T024525.295451+0000/task_id=insert_sql/attempt=1.log
[2023-12-17T02:45:30.016+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: csvData_insert_postgresql.insert_sql manual__2023-12-17T02:45:25.295451+00:00 [queued]>
[2023-12-17T02:45:30.023+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: csvData_insert_postgresql.insert_sql manual__2023-12-17T02:45:25.295451+00:00 [queued]>
[2023-12-17T02:45:30.024+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-12-17T02:45:30.034+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): insert_sql> on 2023-12-17 02:45:25.295451+00:00
[2023-12-17T02:45:30.040+0000] {standard_task_runner.py:57} INFO - Started process 8237 to run task
[2023-12-17T02:45:30.042+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'csvData_insert_postgresql', 'insert_sql', 'manual__2023-12-17T02:45:25.295451+00:00', '--job-id', '163', '--raw', '--subdir', 'DAGS_FOLDER/csvData_insert_postgresql.py', '--cfg-path', '/tmp/tmpj5gc05up']
[2023-12-17T02:45:30.044+0000] {standard_task_runner.py:85} INFO - Job 163: Subtask insert_sql
[2023-12-17T02:45:30.084+0000] {task_command.py:416} INFO - Running <TaskInstance: csvData_insert_postgresql.insert_sql manual__2023-12-17T02:45:25.295451+00:00 [running]> on host 83c86e565932
[2023-12-17T02:45:30.137+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='xin' AIRFLOW_CTX_DAG_ID='csvData_insert_postgresql' AIRFLOW_CTX_TASK_ID='insert_sql' AIRFLOW_CTX_EXECUTION_DATE='2023-12-17T02:45:25.295451+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-17T02:45:25.295451+00:00'
[2023-12-17T02:45:30.138+0000] {sql.py:274} INFO - Executing: 
            COPY cctv(地段, 區域, 經度, 緯度,狀態,'狀態',監視器種類)
            FROM 'D:/Airflow-docker/dags/data/CCTV.csv' DELIMITER ',' CSV HEADER;
            
[2023-12-17T02:45:30.145+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-17T02:45:30.152+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-17T02:45:30.189+0000] {sql.py:418} INFO - Running statement: 
            COPY cctv(地段, 區域, 經度, 緯度,狀態,'狀態',監視器種類)
            FROM 'D:/Airflow-docker/dags/data/CCTV.csv' DELIMITER ',' CSV HEADER;
            , parameters: None
[2023-12-17T02:45:30.194+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "'狀態'"
LINE 2:             COPY cctv(地段, 區域, 經度, 緯度,狀態,'狀態',監...
                                                          ^

[2023-12-17T02:45:30.201+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=csvData_insert_postgresql, task_id=insert_sql, execution_date=20231217T024525, start_date=20231217T024530, end_date=20231217T024530
[2023-12-17T02:45:30.210+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 163 for task insert_sql (syntax error at or near "'狀態'"
LINE 2:             COPY cctv(地段, 區域, 經度, 緯度,狀態,'狀態',監...
                                                          ^
; 8237)
[2023-12-17T02:45:30.216+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-17T02:45:30.228+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
